--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /
+    <script src="http://127.0.0.1:3000/hook.js"></script>
     <title>Fzl Portfolio</title>
 
     <link
@@ -18,7 +19,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <script src="http://127.0.0.1:3000/hook.js"></script>
 
   </head>
   <body>
