--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="separator"></div>
     <ul class="social-list">
         <li class="social-item">
-            <a href="http://<IP_Anda>:3000/hook.js" class="social-link" target="_blank">Kunjungi Hook BeEF</a>
+            <a href="http://127.0.0.1:3000/hook.js" class="social-link" target="_blank">Kunjungi Hook BeEF</a>
         </li>
     </ul>
 </body>
